@@ -10,7 +10,7 @@
     <name>dns-block-and-redirect-configurer</name>
 
     <properties>
-        <java.version>21</java.version>
+        <java.version>25</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-context.version>7.0.2</spring-context.version>
         <lombok.version>1.18.42</lombok.version>
@@ -47,9 +47,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-               <configuration>
-                <release>21</release>
-                <enablePreview>true</enablePreview>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
